110419. Ändringar i skript + utseende vid "Home"

--- a/index.html
+++ b/index.html
@@ -30,9 +30,18 @@
                 </div>
               </nav>
               <section id="home">
-                    <h1>WELCOME</h1>
-                  <p>This is a football themed clicker.</p>
-                  <p>Press "Game" in the navbar or scroll down to play the game!</p>
+                <div class="row">
+                  <div class="col-6">
+                      <h1>WELCOME</h1>
+                      <p>This is a football themed clicker. </p>
+                  </div>
+                  <div class="col-6">
+                    <h1>HOW TO PLAY</h1>
+                    <p>Click on the clicker to earn points. You can then earn points that you can buy things with. </p>
+                </div>
+                <div class="col">
+                  <p>Scroll down on the page or click "Game" in the navbar to play the game.</p>
+                </div>
               </section>
               <section id="thegame">
                     <h3>OH YEEEEEES</h3>
@@ -43,12 +52,16 @@
               </section>
               <section id="about">
                 <h3>ABOUT</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, maxime illum nam saepe labore numquam. Cum iste, quo possimus natus accusantium consequuntur recusandae tenetur beatae minima eaque, debitis, quidem pariatur!</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio incidunt nemo dignissimos. Illum modi eligendi non quae quam optio facilis vitae? Natus placeat recusandae aut, quisquam in saepe fuga odit.</p>
+                <p>This clicker was made as a webbdevelopment project. Made in 2019.</p>
+                <p>
+                  MARCHING ON TOGETHER. WE'RE GONNA SEE YOU WIN.
+                </p>
+                <p>WE ARE SO PROUD, WE SHOUT IT OUT LOUD WE LOVE YOU</p>
+                <p>LEEDS, LEEDS, LEEDS!</p>
               </section>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="js/skript.js"></script>
+  <script src="js/skript.js"></script>
 </body>
 </html>
