250419. Skriptet gör nu spelet spelbart

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                   </div>
                   <div class="col-6">
                     <h1>HOW TO PLAY</h1>
-                    <p>Click on the clicker to earn points. You can then earn points that you can buy things with. </p>
+                    <p>Click on the clicker to earn points. You can then use the points to buy things with. </p>
                 </div>
                 <div class="col">
                   <p>Scroll down on the page or click "Game" in the navbar to play the game.</p>
                 </div>
               </section>
               <section id="thegame">
-                    <h3>OH YEEEEEES</h3>
+                    <h3>LEEDS</h3>
                     <p>Click on the football to earn points. Then you will be able to buy things!</p>
                     <button id="game">0</button>
                     <div id="powerups"></div>
