--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/x-icon" href="https://img.icons8.com/metro/26/000000/football2.png">
     <link href="https://fonts.googleapis.com/css?family=Poppins%7CRoboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>THE FOOTBALL CLICKER</title>
@@ -18,7 +19,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item active">
-                      <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#thegame">Game</a>
@@ -44,8 +45,8 @@
                 </div>
               </section>
               <section id="thegame">
-                    <h3>LEEDS</h3>
-                    <p>Click on the football to earn points. Then you will be able to buy things!</p>
+                    <h3>THE GAME</h3>
+                    <h4>Click on the football to earn points. Then you will be able to buy things!</h4>
                     <button id="game">0</button>
                     <div id="powerups"></div>
                     <p id="bank">CAN YOU BUY IT?!?</p>
@@ -53,13 +54,13 @@
               <section id="about">
                 <h3>ABOUT</h3>
                 <p>This clicker was made as a webbdevelopment project. Made in 2019.</p>
-                <p>
-                  MARCHING ON TOGETHER. WE'RE GONNA SEE YOU WIN.
-                </p>
+                <p>As you might tell, this was made by a Leeds fan.</p>
+                <p>With that said...</p>
+                <p>MARCHING ON TOGETHER. WE'RE GONNA SEE YOU WIN.</p>
                 <p>WE ARE SO PROUD, WE SHOUT IT OUT LOUD WE LOVE YOU</p>
-                <p>LEEDS, LEEDS, LEEDS!</p>
+                <p><a href="https://www.youtube.com/watch?v=DuMyUh26twQ" style="color:white"> LEEDS, LEEDS, LEEDS!</a></p>
               </section>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="js/skript.js"></script>
