090519. Sista kommentarer i skriptet

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <div class="col">
                   <p>Scroll down on the page or click "Game" in the navbar to play the game.</p>
                 </div>
+                </div>
               </section>
               <section id="thegame">
                     <h3>THE GAME</h3>
@@ -53,7 +54,7 @@
               </section>
               <section id="about">
                 <h3>ABOUT</h3>
-                <p>This clicker was made as a webbdevelopment project. Made in 2019.</p>
+                <p>This clicker was made as a webbdevelopment project.</p>
                 <p>As you might tell, this was made by a Leeds fan.</p>
                 <p>With that said...</p>
                 <p>MARCHING ON TOGETHER. WE'RE GONNA SEE YOU WIN.</p>
